sidebar content overflow fixed and animation fixed

--- a/src/index.css
+++ b/src/index.css
@@ -109,3 +109,12 @@ em, i {
   }
 }
 
+.fadeIn {
+  animation: fadeIn 1s forwards;
+}
+
+.fadeOut {
+  animation: fadeOut 1s forwards;
+}
+
+
